test/e2e/loadtest/client/prom-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: loadtest-e2e
  labels:
    application: prometheus
spec:
  rules:
  - host: %TARGET%.%ZONE%
    http:
      paths:
      - backend:
          service:
            name: prometheus
            port:
              number: 80
        pathType: ImplementationSpecific
