test/e2e/loadtest/client/prom-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: prometheus
  namespace: loadtest-e2e
  labels:
    application: prometheus
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 9090
      protocol: TCP
  selector:
    application: prometheus
